fav buttons integrated and colour shifting correctly. photolist loop corrected and completed.

--- a/frontend/src/styles/PhotoFavButton.scss
+++ b/frontend/src/styles/PhotoFavButton.scss
@@ -10,9 +10,15 @@
   height: 32px;
   text-align: center;
   border-radius: 100%;
+  
+  
 }
+
 
 .photo-list__fav-icon-svg {
   padding: 7px;
   top: 2px;
+  &.favorited {
+    fill: red; // Set the color to red when favorited
+  }
 }
